# Image-Filter

./: .gitignore  BMP.cpp  BMP.h  CMakeLists.txt  Exception.cpp  Exception.h  Image.cpp  Image.h  Makefile  Parser.cpp  Parser.h  README.md  cmake_install.cmake  image_processor  image_processor.cpp  test.cpp
filters/: Crop.cpp  Crop.h  Crystallizing.cpp  Crystallizing.h  Edge_Detection.cpp  Edge_Detection.h  Filter.cpp  Filter.h  FilterFactory.cpp  FilterFactory.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  MatrixFilter.cpp  MatrixFilter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
